# ProjectTomato

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TomodachiRecreation.code-workspace  aucmt.txt  build.bat  engine.lua  enginesettings.cap  game.tmg  imgui.ini  lib.lua  out.rres  premake5.lua  scriptcore.lua  tempsettings.cap  test.fbx  test.lua
debug/: 2d.d  ai.d  audio.d  debug.d  fs.d  input.d  math.d  particle.d  physics.d  render.d  time.d  ui.d
examples/: CMakeLists.txt  README.md
examples/01_basic/: CMakeLists.txt  README.md  main.cpp
examples/02_input/: CMakeLists.txt  README.md  main.cpp
examples/03_physics/: CMakeLists.txt  README.md  main.cpp
include/testproject/: testproj.cpp  testproj.hpp
include/tomato/: _tomato.hpp  engine.cpp  engine.hpp  globals.cpp  globals.hpp  tomato.cpp  tomato.hpp  utils.hpp  vertex.h
include/tomato/2D/: 2d.cpp  2d.hpp
include/tomato/Ai/: ai.cpp  ai.hpp
include/tomato/Audio/: audio.cpp  audio.hpp
include/tomato/Debug/: Gizmos.cpp  Gizmos.hpp  debug.cpp  debug.hpp
include/tomato/Engine/: EngineInfo.cpp  EngineInfo.hpp  engine.cpp  engine.hpp
include/tomato/Fs/: BinaryReader.cpp  BinaryReader.hpp  StringBinaryReader.cpp  StringBinaryReader.hpp  fs.cpp  fs.hpp
include/tomato/Input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  input.cpp  input.hpp
include/tomato/Light/: light.cpp  light.hpp
include/tomato/Math/: math.cpp  math.hpp
include/tomato/Net/: net.cpp  net.hpp
include/tomato/Particle/: Particle.cpp  Particle.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp
include/tomato/Physics/: ColliderInitInfo.cpp  ColliderInitInfo.hpp  ColliderObject.cpp  ColliderObject.hpp  Collision.cpp  Collision.hpp  CollisionBase.cpp  CollisionBase.hpp  CollisionCallback.cpp  CollisionCallback.hpp  CollisionShape.cpp  CollisionShape.hpp  ParticleCollision.cpp  ParticleCollision.hpp  PhysicalWorld.cpp  PhysicalWorld.hpp  PhysicsBody.cpp  PhysicsBody.hpp  Ray.cpp  Ray.hpp  RaycastHit.cpp  RaycastHit.hpp  physics.cpp  physics.hpp
include/tomato/Prim/: PrimitiveType.cpp  PrimitiveType.hpp  prim.cpp  prim.hpp
include/tomato/Render/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  ComputeShader.cpp  ComputeShader.hpp  DrawCall.cpp  DrawCall.hpp  Material.cpp  Material.hpp  MaterialOverride.cpp  MaterialOverride.hpp  MaterialState.cpp  MaterialState.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderTexture.cpp  RenderTexture.hpp  RendererInfo.cpp  RendererInfo.hpp  Shader.cpp  Shader.hpp  ShaderInitInfo.cpp  ShaderInitInfo.hpp  ShaderUniform.cpp  ShaderUniform.hpp  SubShader.cpp  SubShader.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  render.cpp  render.hpp
include/tomato/Time/: time.cpp  time.hpp
include/tomato/Ui/: ButtonObject.cpp  ButtonObject.hpp  Rect.cpp  Rect.hpp  SpriteObject.cpp  SpriteObject.hpp  ui.cpp  ui.hpp
include/tomato/ecs/: actor.cpp  actor.h  component_registry.h
include/tomato/misc/: audio.cpp  audio.h  debug.cpp  debug.h  phys.cpp  phys.h
include/tomato/rendering/: imgui_ext.cpp  imgui_ext.hpp  lighting.cpp  lighting.h  render.cpp  render.h  tmgl.cpp  tmgl.h  ui.cpp  ui.h
include/tomato/scripting/: script.cpp  script.h
include/tomato/util/: collections.h  filesystem_tm.h  input.h  utils.cpp  utils.h
include/tomatoEngine/: editor.cpp  editor.h
include/tomato_generated/: cube.h  sphere.h
projectsys/: generate_proj.lua  proj_main.cs
release/: 2d.d  ai.d  debug.d  engine.d  globals.d  input.d  light.d  math.d  net.d  obj.d  particle.d  physics.d  prim.d  render.d  time.d  ui.d
resources/models/: godot_plush.fbx  test.fbx  untitled.fbx
resources/shaders/paintMap/: frag.fbsh  readback-compute.cbsh  varying.def.sc  vert.vbsh
resources/shaders/quad/: fragment.glsl  vertex.glsl
resources/shaders/sprite/: frag.fbsh  varying.def.sc  vert.vbsh
resources/shaders/terr/: frag.fbsh  vert.vbsh
resources/shaders/test/: frag.fbsh  fragment.glsl  vert.vbsh  vertex.glsl
runtime/shaders/dx/: frag.cfbsh  frag.cfbsh.d  frag.cfbsh.disasm  vert.cvbsh.d
runtime/shaders/gl/: frag.cfbsh.d  vert.cvbsh  vert.cvbsh.d  vert.cvbsh.disasm
runtime/shaders/spirv/: frag.cfbsh.d  vert.cvbsh.d  vert.cvbsh.disasm
scriptcore/src/Tomato/: Actor.cs  Camera.cs  Component.cs  InternalCalls.cs  Math.cs  MonoComponent.cs  Object.cs  Scene.cs  TestComponent.cs  Time.cs  Transform.cs
scripts/: CodeGeneratedIncludes.json  CodeSeparateConfig.json  buildShader.bat  buildShader.py  buildShaders.bat  convertModels.py  sep_code.bat  separateCode.py
source/: main.cpp
temp/: bgfx_frame11537.rdc  bgfx_frame5126.rdc  bgfx_frame5127.rdc
